...
                                    </View>
                                </TouchableOpacity>
                                <Divider />
                                <TouchableOpacity style={{paddingHorizontal: 10, flexDirection: "row", justifyContent: "space-between"}} onPress={() => setModalVisible(!modalVisible)}>
                                    <View style={{flexDirection: "row", alignItems: "center"}}>
                                        <IconButton icon="logout" iconColor={colors.accent} size={20} />
                                        <Text style={[styles.textFontMedium, {fontSize: 16, color:colors.default_dark}]}>Déconnexion</Text>
                                    </View>
                                    <View style={{flexDirection: "row", alignItems: "center"}}>
                                        <IconButton icon="chevron-right" iconColor={colors.accent} size={20} />
                                    </View>
                                </TouchableOpacity>
                            </View>
...
